# inventory_app

./: .gitignore  pyproject.toml
authentication/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_inviteduser_user.py  0003_userprofile.py  0004_userprofile_first_name_userprofile_last_name.py  0005_remove_userprofile_first_name_and_more.py
authentication/templates/: base.html  signin.html  signup.html
import_data/: item_data.csv  item_template.csv
inventory/: admin.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_unitofmeasure_description.py  0003_alter_category_description.py  0004_item_cost_price_item_created_at_item_opening_stock_and_more.py  0005_itemimage.py  0006_itemimage_upload_date.py  0007_inventoryadjustment.py  0008_item_current_stock.py  0009_inventoryadjustment_created_at.py  0010_alter_inventoryadjustment_reason.py  0011_rename_cost_price_item_purchase_price_and_more.py  0012_alter_inventoryadjustment_reason.py  0013_alter_itemimage_image.py  0014_alter_item_current_stock.py  0015_alter_item_current_stock.py  0016_remove_item_track_inventory.py  0017_inventoryadjustment_user.py  0019_alter_item_unit.py  (+9 more)
main/: urls.py  views.py
purchases/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
reports/: urls.py  views.py
sales/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
stockflow/: celery.py  settings.py  urls.py
(+139 files in other folders)
